# wrds-research-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: permissions.yaml
src/wrds_research_mcp/: __init__.py  capabilities.py  catalog.py  cli.py  clients.py  credentials.py  default_permissions.yaml  dictionary.py  discovery.py  generic.py  identifiers.py  library_descriptions.py  models.py  nlp.py  pipeline.py  policy.py  profile_selection.py  query.py  server.py  setup_cli.py  wrds_connection.py  writers.py
tests/: test_capabilities.py  test_clients.py  test_credentials.py  test_dictionary.py  test_discovery.py  test_generic.py  test_library_descriptions.py  test_nlp.py  test_pipeline.py  test_policy.py  test_query.py  test_wrds_connection.py
